@@ -1777,39 +1777,25 @@ void drawFrame( char inUpdate ) {
 
                 PowerUpSet newSet( currentLevel->getPlayerPowers() );
 
-                char replacementDone = false;
-                for( int s=0; s<POWER_SET_SIZE; s++ ) {
-                    
-                    if( !replacementDone ) {
-                        
-                        if( newSet.mPowers[s].powerType != powerUpEmpty ) {
-                        
-                            newSet.mPowers[s].powerType = powerUpHeart;
-                            newSet.mPowers[s].level = 1;
-                            
-                            replacementDone = true;
-                            }
-                        }
+                newSet.sortPowersRight();
+                
 
-                    if( newSet.mPowers[s].powerType == powerUpEmpty ) {
-                        newSet.mPowers[s].powerType = powerUpHeart;
-                        newSet.mPowers[s].level = 1;
-                        }    
-                    }
-                
-                
-                if( getMaxHealth( &newSet ) > 2 ) {
-                    
-                    // too many hearts!
-                    // change to empty, heart(1), heart(1) as base
-                    
+                // if left-most is not empty, make it empty
+
+                if( newSet.mPowers[0].powerType != powerUpEmpty ) {
                     newSet.mPowers[0].powerType = powerUpEmpty;
-                    newSet.mPowers[0].level = 0;
+                    newSet.mPowers[0].level = 0;     
+                    }
+
+
+                // now replace empty slots with 2 hearts each
+                for( int s=0; s<POWER_SET_SIZE; s++ ) {
+
+                    if( newSet.mPowers[s].powerType == powerUpEmpty ) {    
+                        newSet.mPowers[s].powerType = powerUpHeart;
+                        newSet.mPowers[s].level = 2;
+                        }
                     
-                    newSet.mPowers[1].powerType = powerUpHeart;
-                    newSet.mPowers[1].level = 1;
-                    newSet.mPowers[2].powerType = powerUpHeart;
-                    newSet.mPowers[2].level = 1;
                     }
                 
                 PowerUpSet *currentPowers = currentLevel->getPlayerPowers();
